<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java_by_square_inc">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="downloading">Downloading</string>
    <string name="download">Download</string>
    <string name="cloud_image">Cloud image</string>
    <string name="downloaded_successfully">Downloaded Successfully</string>
    <string name="failed_to_download">Failed to download</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="ok">Ok</string>
    <string name="show_details">Show Details</string>
</resources>
