<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_detail_xml_main_layout_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.othman.loadapp.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ImageView
        android:id="@+id/download_img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#303030"
        android:contentDescription="@string/downloaded_successfully"
        android:src="@drawable/ic_round_cloud_done_24"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/file_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/file_name"
        android:textColor="#000"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/download_img" />


    <TextView
        android:id="@+id/file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="#505050"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/file_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_name_text"
        app:layout_constraintTop_toTopOf="@id/file_name_text"
        tools:text="Glide" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/status"
        android:textColor="#000"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="@id/file_name_text"
        app:layout_constraintTop_toBottomOf="@id/file_name" />


    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="#505050"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/status_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/status_text"
        app:layout_constraintTop_toTopOf="@id/status_text"
        tools:text="@string/success" />


    <com.othman.loadapp.LoadingButton
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lb_idle_text="@string/ok"
        app:lb_radius="15dp"
        app:lb_textSize="18sp" />

</androidx.constraintlayout.motion.widget.MotionLayout>